video fix and pwrap anim fix test

--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -85,11 +85,11 @@
       position: absolute;
       top: 10px;
       left: Calc(-1em - 5px);
-      transition: bottom 0.7s ease;
+      transition: bottom 0.5s ease;
     }
     &.animate::before {
-      -webkit-animation: xtend 0.7s forwards;
-      animation: xtend 0.7s forwards; /* Trigger animation */
+      -webkit-animation: xtend 0.5s forwards;
+      animation: xtend 0.5s forwards; /* Trigger animation */
     }
 
     &:last-child {
@@ -605,9 +605,19 @@
   .pCont .cont-form {
     width: 100%;
   }
+  .Pwrap{
+    padding-top: 10vh !important;
+  }
 }
 @media (max-width: 500px) {
-
+.pFeature{
+  li{
+    &::before {
+      top: 5px;
+      left: Calc(-1em - 0.5em);
+    }
+  }
+}
   .pInfo {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 
